--- a/deploy.yml
+++ b/deploy.yml
@@ -1,12 +1,31 @@
-- name: Playbook de Atualizações de Sistemas Operacionais e implementação do zabbix 3 Camadas.
+- name: Playbook de Instalação e Implementação Zabbix 3 Camadas Usando CentOS + Vagrant
   hosts:
     - zabbix
+    - DC01
   
   vars:
+    
     # VARIAVEL DE HOSTS
-    - zbx_front: 172.18.10.100
-    - zbx_srv: 172.18.10.110 
-    - zbx_db: 172.18.10.120
+    
+    - zbx_front: 192.168.3.100
+    - zbx_srv: 192.168.3.110
+    - zbx_db: 192.168.3.120
+    - DC01: 192.168.3.200
+    
+    # VARIAVEL DE TimeZone.
+    - timezone: America/Sao_Paulo
+
+    - url_zabbix: http://192.168.3.100/zabbix/
+    
+    # VARIAVEL DE URL_ZABBIX
+    - url_packages_zabbix: http://repo.zabbix.com/zabbix/5.5/rhel/8/x86_64/zabbix-release-5.5-1.el8.noarch.rpm 
+      
+    # VARIAVEIS DE URL GRAFANA
+    - url_packages_grafana: https://dl.grafana.com/oss/release/grafana-8.2.5-1.x86_64.rpm
+    
+
+    # SENHA DO ROOT
+    - root_pass: 'zabbix'
 
     # VARIAVEL CRIAÇÃO DO BANCO DE DADOS 
     - db_name: 'zabbix'
@@ -22,6 +41,8 @@
     # VARIAVEIS DE CRIAÇÃO DE USUARIO zabbix_web 
     - db_user_web: 'zabbix_web'
     - db_user_pass_web: 'zabbix'
+
+    # CONFIGURAÇÃO DO FRONTEND DO ZABBIX
     - zbx_port: 10051
     - zbx_name: Monitor_Ansible
     - zbx_web: 'zabbix'
@@ -33,23 +54,19 @@
         - 3306/tcp
         - 80/tcp
         - 443/tcp
-        
-    # VARIAVEL DE TimeZone.
-    - timezone: America/Sao_Paulo
+
     
-    # VARIAVEL DE URL_ZABBIX
-    - url_packages_zabbix: http://repo.zabbix.com/zabbix/5.5/rhel/8/x86_64/zabbix-release-5.5-1.el8.noarch.rpm 
-    
-   # LISTA DE PACOTES INSTALAR FRONTEND
+    # LISTA DE PACOTES INSTALAR FRONTEND
     - packages_zabbix_frontend:
-        - mysql 
+        - mysql
+        - zabbix-agent2 
         - zabbix-apache-conf
         - zabbix-web-mysql
         - httpd
-
-
+  
   roles:
-    - role: Common
+   
+    #- role: Common_Linux
     - role: db_zabbix
       when: ansible_host == zbx_db
     - role: zabbix_server
@@ -57,5 +74,10 @@
     - role: zabbix_front
       when: ansible_host == zbx_front
     - role: zabbix_agent_linux
-      when: ansible_host == zbx_front or zbx_db
-    
+      when: ansible_host == zbx_front
+    - role: zabbix_agent_linux
+      when: ansible_host == zbx_db
+    - role: api_add_linux
+    # INCIANDO ROLES DO WINDOWS 
+    - role: Common_Windows
+    - role: api_add_windows
