--- a/roles/db_zabbix/defaults/main.yml
+++ b/roles/db_zabbix/defaults/main.yml
@@ -1,19 +1,10 @@
 ---
 # defaults file for db_zabbix 
-# Arquivos de variaveis  criação do banco de dados e usuario remoto
-
-#zbx_front: 172.18.10.100
-#zbx_srv: 172.18.10.110
-#zbx_db: 172.18.10.120
+# Pacotes de Instalação da App MYSQL + Particionamento. 
 
 packages_mysql:
   - mysql-server
   - mysql
   - python3-PyMySQL
-
-# Senha do UsuarioRoot
-#root_pass: 'zabbix'
-
-# # Nome database do zabbix
-#db_name: 'zabbix'
-
+  - git
+  - dos2unix
