--- a/roles/zabbix_agent_linux/tasks/main.yml
+++ b/roles/zabbix_agent_linux/tasks/main.yml
@@ -1,56 +1,3 @@
----
-# tasks file for install_zabbix_agent_linux
+- name: Instalação do zabbix_server
+  include_tasks: agent.yml
 
-- name: Adcionando Repositorio Zabbix - CentOS8
-  dnf:
-    name: '{{ url_packages_zabbix }}'
-    state: present
-  tags: zabbix_agent2
-# --------------------------------------------------------------------------------------------#
-#
-- name: Instalando pacote zabbix-agent2
-  dnf:
-    name: zabbix-agent2
-    state: latest
-  tags: zabbix_agent2
-  when: ansible_distribution == "CentOS"
-# --------------------------------------------------------------------------------------------#
-- name: Iniciar/ Habilitar zabbix-agent2
-  systemd:
-    name: zabbix-agent2
-    state: started
-    enabled: yes
-  tags: zabbix_agent2
-  when: ansible_distribution == "CentOS"
-#----------------------------------------------------------------------------------------------#
-- name: Adcionado Porta firewalld  Zabbix_Server/Zabbix_Agent
-  firewalld:
-    port: "{{ item }}"
-    permanent: yes
-    state: enabled
-  loop:
-    - 10050/tcp
-  tags: zabbix_agent2
-  when: ansible_distribution == "CentOS"
-# ----------------------------------------------------------------------------------------------#
-- name: Reload no firewalld
-  systemd:
-    name: firewalld
-    state: reloaded
-    enabled: yes
-  tags: zabbix_agent2
-#-------------------------------------------------------------------------------#
-- name: SSH | Setando configurações de segurança no arquivo zabbix_server.conf
-  lineinfile:
-    dest: /etc/zabbix/zabbix_agent2.conf
-    state: present
-    regexp: "{{ item.regexp }}"
-    line: "{{ item.line }}"
-    backrefs: yes
-  loop:
-    - { regexp: 'Server=127.0.0.1', line: 'Server={{ zbx_db }}' }
-    - { regexp: 'ServerActive=127.0.0.1', line: 'ServerActive={{ zbx_db }}'}
-    - { regexp: 'Hostname=Zabbix server', line: 'Hostname={{ ansible_fqdn }}' }
-    - { regexp: '# Timeout=3', line: 'Timeout=30' }
-  when: ansible_distribution == "CentOS"
-  tags: zabbix_agent2
