--- a/roles/api_add_windows/tasks/main.yml
+++ b/roles/api_add_windows/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# tasks file for api_zabbix
+# tasks file for api_zabbix create hosts windows
 - name: Criar um novo host {{ DC01 }}
   local_action:
     module: community.zabbix.zabbix_host
