--- a/deploy.yml
+++ b/deploy.yml
@@ -2,7 +2,7 @@
   hosts:
     - zabbix
     - zbx_proxy
-    - DC01
+    #- DC01
         
   vars:
     
@@ -12,7 +12,8 @@
     - zbx_srv: 192.168.3.110
     - zbx_db: 192.168.3.120
     - zbx_proxy: 192.168.3.130
-    - DC01: 192.168.3.200
+    - DC01: 192.168.3.200 
+    
     
     # VARIAVEL DE TimeZone.
     - timezone: America/Sao_Paulo
@@ -23,16 +24,21 @@
 
 
     # VARIAVEL DE API URL  
+    # VARIAVEL HOSTNAME DO ZABBIX PROXY
     - url_zabbix_api: http://192.168.3.100/zabbix/
+    - username: 'Admin'
+    - password: 'zabbix'
+    - zbx_srv: 192.168.3.110
+    - proxy_name: 'zbx_proxy'
     
     # VARIAVEL DE URL_ZABBIX
     - url_packages_zabbix: http://repo.zabbix.com/zabbix/5.5/rhel/8/x86_64/zabbix-release-5.5-1.el8.noarch.rpm 
       
-    # VARIAVEIS DE URL GRAFANA
+    # VARIAVEIS DE URL VERSÃO DO GRAFANA
     - url_packages_grafana: https://dl.grafana.com/oss/release/grafana-8.2.5-1.x86_64.rpm
     
 
-    # SENHA DO ROOT
+    # SENHA DO USER LOCAL ROOT
     - root_pass: 'zabbix'
 
     # VARIAVEL CRIAÇÃO DO BANCO DE DADOS 
@@ -75,18 +81,19 @@
   
   roles:
    
-    #- role: Common_Linux
-    # - role: db_zabbix
-    #   when: ansible_host == zbx_db
-    # - role: zabbix_server
-    #   when: ansible_host == zbx_srv
-    # - role: zabbix_front
-    #   when: ansible_host == zbx_front
-    # - role: zabbix_agent_linux
-    #   when: ansible_host == zbx_front
-    # - role: zabbix_agent_linux
-    #   when: ansible_host == zbx_db
-    # - role: grafana_server
-    #   when: ansible_host == zbx_front
-    - role: zabbix_proxy
-      when: ansible_host == zbx_proxy
+     #- role: Common_Linux
+     #- role: db_zabbix
+     #  when: ansible_host == zbx_db
+     - role: zabbix_server
+       when: ansible_host == zbx_srv
+     #- role: zabbix_front
+     #  when: ansible_host == zbx_front
+     #- role: zabbix_agent_linux
+     #  when: ansible_host == zbx_front
+     #- role: zabbix_agent_linux
+     #  when: ansible_host == zbx_db
+     #- role: grafana_server
+     #  when: ansible_host == zbx_front
+     #- role: zabbix_proxy
+       #when: ansible_host == zbx_proxy
+       #- role:  api_add_linux
